--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>💖William's Personal Site</title>
 </head>
-<body>
+<body style="background-color: blue">
     <table cellspacing="20">
         <tr>
             <td><img src="william.png" alt="William profile pic" height="160" width="160"></td>
